--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,7 @@ source:
   sha256: c780cf8cf3ba5ec2648a7eeb20a47e274493258f38a9b417628e0576f473a50b
 
 build:
-  number: 1
-  skip: true  # [win and vc<14]
+  number: 2
 
 requirements:
   build:
@@ -45,7 +44,7 @@ about:
     Releases for details for current and past releases. Also see the
     Version 1.0 post, Version 1.3 post, or Version 1.6 post for more
     information.
-  doc_url: https://cliutils.github.io/CLI11/book/
+  doc_url: https://cliutils.github.io/CLI11/book
   dev_url: https://github.com/CLIUtils/CLI11
 
 extra:
